; ModuleID = '/home/carl/AnghaBench/kphp-kdb/mc-proxy/extr_mc-proxy.c_mcp_get_end.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/mc-proxy/extr_mc-proxy.c_mcp_get_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.connection = type { i32, i64, i32, i32 }
%struct.TYPE_4__ = type { i64 }
%struct.conn_query = type { i32 }

@verbosity = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"proxy_get_end (%d)\0A\00", align 1
@get_targets = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"END\0D\0A\00", align 1
@conn_wait_net = common dso_local global i32 0, align 4
@get_target = common dso_local global %struct.TYPE_3__** null, align 8
@get_connection = common dso_local global %struct.connection** null, align 8
@.str.2 = private unnamed_addr constant [3 x i8] c"\0D\0A\00", align 1
@CC = common dso_local global %struct.TYPE_4__* null, align 8
@precise_now = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mcp_get_end(%struct.connection* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.connection*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.connection*, align 8
  %8 = alloca %struct.conn_query*, align 8
  %9 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %4, align 8
  store i32 %1, i32* %5, align 4
  %10 = load i32, i32* @verbosity, align 4
  %11 = icmp sgt i32 %10, 1
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load i32, i32* @stderr, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @fprintf(i32 %13, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %14)
  br label %16

16:                                               ; preds = %12, %2
  %17 = load i32, i32* @get_targets, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %25, label %19

19:                                               ; preds = %16
  %20 = load %struct.connection*, %struct.connection** %4, align 8
  %21 = call i32 @free_tmp_buffers(%struct.connection* %20)
  %22 = load %struct.connection*, %struct.connection** %4, align 8
  %23 = getelementptr inbounds %struct.connection, %struct.connection* %22, i32 0, i32 2
  %24 = call i32 @write_out(i32* %23, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 5)
  store i32 0, i32* %3, align 4
  br label %99

25:                                               ; preds = %16
  %26 = load i32, i32* @conn_wait_net, align 4
  %27 = load %struct.connection*, %struct.connection** %4, align 8
  %28 = getelementptr inbounds %struct.connection, %struct.connection* %27, i32 0, i32 3
  store i32 %26, i32* %28, align 4
  store i32 0, i32* %6, align 4
  br label %29

29:                                               ; preds = %88, %25
  %30 = load i32, i32* %6, align 4
  %31 = load i32, i32* @get_targets, align 4
  %32 = icmp slt i32 %30, %31
  br i1 %32, label %33, label %91

33:                                               ; preds = %29
  %34 = load %struct.TYPE_3__**, %struct.TYPE_3__*** @get_target, align 8
  %35 = load i32, i32* %6, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %34, i64 %36
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  store i32 %40, i32* %9, align 4
  %41 = load %struct.TYPE_3__**, %struct.TYPE_3__*** @get_target, align 8
  %42 = load i32, i32* %6, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %41, i64 %43
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** %44, align 8
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 0
  store i32 0, i32* %46, align 4
  %47 = load i32, i32* %9, align 4
  %48 = icmp sgt i32 %47, 0
  br i1 %48, label %49, label %87

49:                                               ; preds = %33
  %50 = load %struct.connection**, %struct.connection*** @get_connection, align 8
  %51 = load i32, i32* %6, align 4
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds %struct.connection*, %struct.connection** %50, i64 %52
  %54 = load %struct.connection*, %struct.connection** %53, align 8
  store %struct.connection* %54, %struct.connection** %7, align 8
  %55 = load %struct.connection*, %struct.connection** %7, align 8
  %56 = getelementptr inbounds %struct.connection, %struct.connection* %55, i32 0, i32 2
  %57 = call i32 @write_out(i32* %56, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0), i32 2)
  %58 = load %struct.connection*, %struct.connection** %7, align 8
  %59 = load %struct.connection*, %struct.connection** %4, align 8
  %60 = load %struct.TYPE_4__*, %struct.TYPE_4__** @CC, align 8
  %61 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %60, i32 0, i32 0
  %62 = load i64, i64* %61, align 8
  %63 = sitofp i64 %62 to double
  %64 = fadd double %63, 2.000000e-01
  %65 = fptosi double %64 to i64
  %66 = call %struct.conn_query* @create_query(%struct.connection* %58, %struct.connection* %59, i64 %65)
  store %struct.conn_query* %66, %struct.conn_query** %8, align 8
  %67 = load %struct.connection*, %struct.connection** %4, align 8
  %68 = getelementptr inbounds %struct.connection, %struct.connection* %67, i32 0, i32 1
  %69 = load i64, i64* %68, align 8
  %70 = icmp ne i64 %69, 0
  br i1 %70, label %71, label %76

71:                                               ; preds = %49
  %72 = load %struct.conn_query*, %struct.conn_query** %8, align 8
  %73 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %72, i32 0, i32 0
  %74 = load i32, i32* %73, align 4
  %75 = or i32 %74, 4096
  store i32 %75, i32* %73, align 4
  br label %76

76:                                               ; preds = %71, %49
  %77 = load %struct.connection*, %struct.connection** %7, align 8
  %78 = call i32 @flush_output(%struct.connection* %77)
  %79 = load i32, i32* @precise_now, align 4
  %80 = load %struct.connection*, %struct.connection** %7, align 8
  %81 = getelementptr inbounds %struct.connection, %struct.connection* %80, i32 0, i32 0
  store i32 %79, i32* %81, align 8
  %82 = load %struct.connection*, %struct.connection** %7, align 8
  %83 = load %struct.TYPE_4__*, %struct.TYPE_4__** @CC, align 8
  %84 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %83, i32 0, i32 0
  %85 = load i64, i64* %84, align 8
  %86 = call i32 @accumulate_query_timeout(%struct.connection* %82, i64 %85)
  br label %87

87:                                               ; preds = %76, %33
  br label %88

88:                                               ; preds = %87
  %89 = load i32, i32* %6, align 4
  %90 = add nsw i32 %89, 1
  store i32 %90, i32* %6, align 4
  br label %29

91:                                               ; preds = %29
  %92 = load %struct.connection*, %struct.connection** %4, align 8
  %93 = load %struct.TYPE_4__*, %struct.TYPE_4__** @CC, align 8
  %94 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %93, i32 0, i32 0
  %95 = load i64, i64* %94, align 8
  %96 = call i32 @set_connection_timeout(%struct.connection* %92, i64 %95)
  %97 = load %struct.connection*, %struct.connection** %4, align 8
  %98 = call i32 @free_tmp_buffers(%struct.connection* %97)
  store i32 0, i32* %3, align 4
  br label %99

99:                                               ; preds = %91, %19
  %100 = load i32, i32* %3, align 4
  ret i32 %100
}

declare dso_local i32 @fprintf(i32, i8*, i32) #1

declare dso_local i32 @free_tmp_buffers(%struct.connection*) #1

declare dso_local i32 @write_out(i32*, i8*, i32) #1

declare dso_local %struct.conn_query* @create_query(%struct.connection*, %struct.connection*, i64) #1

declare dso_local i32 @flush_output(%struct.connection*) #1

declare dso_local i32 @accumulate_query_timeout(%struct.connection*, i64) #1

declare dso_local i32 @set_connection_timeout(%struct.connection*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
